--- a/index.html
+++ b/index.html
@@ -2025,7 +2025,7 @@ input:focus {
                         </div>
                         <div class="input-3d-popup">
                             <div class="input-container">
-                                <input type="number" id="sPercentage" placeholder="Enter Skill Percentage min="0" max="100">
+                                <input type="number" id="sPercentage" placeholder="Enter Skill Percentage" min="0" max="100">
                                 <i class="fas fa-percent input-icon"></i>
                             </div>
                         </div>
